syntax = "proto3";

option java_multiple_files = true;
option java_package = "supabase.subscriptions-service.v1";
option java_outer_classname = "SubscriptionsService";
option objc_class_prefix = "SUPA";
option go_package = ".;SubscriptionsService_v1";

package supabase.v1;

import "Common.proto";

message RemoveSubscriptionResponse {
  oneof removeSubscription_one_of {
    RemoveSubscriptionData data = 1;
    Error error = 2;
  }
}

message RemoveSubscriptionData {
  int32 openSubscriptions = 1;
}

message RealtimeSubscription {
    string id = 1;
}

message ListSubscriptionsResponse {
  oneof listSubscriptions_one_of {
    RealtimeSubscriptions realtimeSubscriptions = 1;
    Error error = 2;
  }
}

message RealtimeSubscriptions {
    repeated string id = 1;
}
